--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 
-server.port=8080
+server.port=8000
+
+spring.datasource.url=jdbc:mysql://localhost:3306/rabbit?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=P@ssw0rd
