--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <fork>
+                        false
+                    </fork>
+                </configuration>
             </plugin>
         </plugins>
     </build>
