--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-
 server.port=8000
 
 spring.datasource.url=jdbc:mysql://localhost:3306/rabbit?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=P@ssw0rd
+spring.datasource.tomcat.max-idle=10
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.initial-size=5
