--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=8000
+
+# mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/rabbit?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=P@ssw0rd
@@ -6,3 +8,12 @@ spring.datasource.tomcat.max-idle=10
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.initial-size=5
+
+# file upload
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=0
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.resolve-lazily=false
+
+# redis
