--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,10 @@ spring.servlet.multipart.max-request-size=5MB
 spring.servlet.multipart.resolve-lazily=false
 
 # redis
+spring.redis.port=6379
+spring.redis.host=localhost
+spring.redis.timeout=1000
+spring.redis.jedis.pool.max-wait=2000
+spring.redis.jedis.pool.max-active=10
+spring.redis.jedis.pool.min-idle=5
+spring.redis.jedis.pool.max-idle=10
