--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8000
 
 # mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/rabbit?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/rabbit?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=P@ssw0rd
 spring.datasource.tomcat.max-idle=10
@@ -18,7 +18,7 @@ spring.servlet.multipart.resolve-lazily=false
 
 # redis
 spring.redis.port=6379
-spring.redis.host=localhost
+spring.redis.host=redis
 spring.redis.timeout=1000
 spring.redis.jedis.pool.max-wait=2000
 spring.redis.jedis.pool.max-active=10
