Verify Service & Async

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,9 @@ spring.redis.jedis.pool.max-wait=2000
 spring.redis.jedis.pool.max-active=10
 spring.redis.jedis.pool.min-idle=5
 spring.redis.jedis.pool.max-idle=10
+
+# mail
+spring.mail.host=smtp.163.com
+spring.mail.port=25
+spring.mail.username=
+spring.mail.password=
