--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.redis.jedis.pool.min-idle=5
 spring.redis.jedis.pool.max-idle=10
 
 # mail
-spring.mail.host=smtp.163.com
-spring.mail.port=25
+spring.mail.host=
+spring.mail.port=
 spring.mail.username=
 spring.mail.password=
