CORS & VCode verify Step 1

--- a/src/main/resources/rabbit-example.properties
+++ b/src/main/resources/rabbit-example.properties
@@ -10,3 +10,6 @@ rabbit.oauth.github.APP_SECRET=
 
 rabbit.oauth.qq.APP_ID=
 rabbit.oauth.qq.APP_SECRET=
+
+rabbit.vaptcha.ID=
+rabbit.vaptcha.SECRET=
