OAuth && Bug Fix

--- a/src/main/resources/rabbit-example.properties
+++ b/src/main/resources/rabbit-example.properties
@@ -3,13 +3,14 @@ rabbit.path=files/
 
 rabbit.limit.login=5
 rabbit.limit.register=2
-rabbit.limit.max-unused-attach-per-user=15
+rabbit.limit.MAX_UNUSED_ATTACH_PER_USER=15
 
 rabbit.oauth.github.APP_ID=
 rabbit.oauth.github.APP_SECRET=
 
 rabbit.oauth.qq.APP_ID=
 rabbit.oauth.qq.APP_SECRET=
+rabbit.oauth.qq.REDIRECT=
 
 rabbit.vaptcha.ID=
 rabbit.vaptcha.SECRET=
