--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,18 @@
 server.port=8000
-
 # mysql
-spring.datasource.url=jdbc:mysql://mysql:3306/rabbit?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://mysql:3306/rabbit?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=P@ssw0rd
 spring.datasource.tomcat.max-idle=10
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.initial-size=5
-
 # file upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=0
 spring.servlet.multipart.max-file-size=1MB
 spring.servlet.multipart.max-request-size=1MB
 spring.servlet.multipart.resolve-lazily=false
-
 # redis
 spring.redis.port=6379
 spring.redis.host=redis
@@ -24,7 +21,6 @@ spring.redis.jedis.pool.max-wait=2000
 spring.redis.jedis.pool.max-active=10
 spring.redis.jedis.pool.min-idle=5
 spring.redis.jedis.pool.max-idle=10
-
 # mail
 spring.mail.host=
 spring.mail.port=
