reset data format for safari support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.mail.host=
 spring.mail.port=
 spring.mail.username=
 spring.mail.password=
+#time
+spring.jackson.date-format=yyyy/MM/dd HH:mm:ss
+spring.jackson.time-zone=GMT+8:00
