--- a/pom.xml
+++ b/pom.xml
@@ -15,23 +15,26 @@
     <description>6Rabbit Backend</description>
 
     <properties>
-        <java.version>12</java.version>
+        <java.version>13</java.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.6.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.1.6.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.1.6.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -88,6 +91,7 @@
                     <artifactId>lettuce-core</artifactId>
                 </exclusion>
             </exclusions>
+            <version>2.1.6.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -98,6 +102,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.1.6.RELEASE</version>
         </dependency>
 
         <dependency>
